front/kubernetes/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels: 
    app: front
spec:
  selector: 
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front-container
        image: front:2
        ports:
        - containerPort: 80
