front/kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
      nodePort: 30000
  selector:
    app: front
